--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "requests>=2.32.3",
     "streamlit>=1.43.2",
     "streamlit-lottie>=0.0.5",
+    "types-requests>=2.32.0.20250306",
 ]
